# translatio

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
translatio/: __init__.py  translatio.py
