[metadata]
name = Translatio
version = 0.1.0
author = Jegor Kitškerkin
author_email = jegor.kitskerkin@gmail.com
url = http://pypi.python.org/pypi/translatio/
description = Translate big datasets effortlessly!
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent